--- a/tailwind-sandbox/02-colors/index.html
+++ b/tailwind-sandbox/02-colors/index.html
@@ -12,21 +12,47 @@
     <!-- white, black, red, green, blue, orange, yellow, purple, lime, emerald, teal, cyan, indigo, violet, fuchsia, pink, rose, sky, gray, slate, zinc, neutral, stone, amber,  -->
 
     <!-- Text Colors -->
+    <p class="text-black">Tailwind is awesome!</p>
+    <p class="text-orange-700">Tailwind is awesome!</p>
 
     <!-- Background Colors -->
+    <p class="bg-slate-200">Tailwind is awesome!</p>
+    <p class="bg-yellow-200">Tailwind is awesome!</p>
+    <p class="bg-indigo-200">Tailwind is awesome!</p>
 
     <!-- Text Underline -->
+    <p class="underline decoration-red-500">Tailwind is awesome!</p>
+    <p class="underline decoration-emerald-500">Tailwind is awesome!</p>
 
     <!-- Border Colors -->
+    <input type="text" class="border border-blue-400">
+    <input type="text" class="border border-green-400">
+    <input type="text" class="border border-orange-400">
+    <input type="text" class="border border-red-400">
 
     <!-- Divide Colors -->
+    <div class="divide-y divide-blue-300">
+      <div>Item 1</div>
+      <div>Item 2</div>
+      <div>Item 3</div>
+      <div>Item 4</div>
+      <div>Item 5</div>
+    </div>
 
     <!-- Outline Colors -->
+    <button class="outline outline-red-500">Hello</button>
+    <button class="outline outline-blue-200">Hello</button>
 
     <!-- Box Shadow Colors (Opacity defaults to 100, but you can set it)-->
+    <div class="shadow-lg bg-cyan-500 shadow-purple-500">Shadowed box</div>
 
     <!-- Accent Colors -->
+    <input type="checkbox" class="accent-purple-500" checked/>
+    <input type="checkbox" class="accent-cyan-500" checked/>
+    <input type="checkbox" class="accent-blue-500" checked/>
 
     <!-- Arbitrary Colors -->
+    <div class="bg-[#427fab]">Hello!</div>
+    <div class="bg-[rgb(255,0,0)]">Hello!</div>
   </body>
 </html>
